# econith

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ml.txt  requirements-train.txt  requirements.txt  setup_project.sh
ai/: __init__.py
api/: __init__.py
bridges/: __init__.py  quant_bridge.py  social_bridge.py  vendor_shims.py  world_bridge.py
collectors/: README.md  __init__.py  requirements.txt
config/: __init__.py  database.py  environment.py  settings.py
core/: __init__.py  engine.py  event_bus.py  llm_pool.py  locale_prefs.py  mode.py  system_controller.py  telemetry.py
dashboard/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
docs/: ARCHITECTURE_BLUEPRINT.md  RESTRUCTURE_BLUEPRINT.md
econith/: __init__.py  base.py
econith-vps-collector/: alerts.py  config.py  daemon.py  econith-collector.service  reporting.py  requirements.txt  storage.py
econith_quant/: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  econith.service  econith.service.watchdog  freqtrade.service  mkdocs.yml  pyproject.toml  setup.ps1  setup.sh
econith_quant/econith_client/: README.md  pyproject.toml  requirements.txt
econith_quant/econith_client/econith_client/: __init__.py  ft_client.py  ft_rest_client.py
econith_quant/econith_client/test_client/: test_rest_client.py
infrastructure/: __init__.py
quant/: __init__.py  ccxt_bridge.py  context_slicer.py  payloads.py  pretrade_gate.py
scripts/: 01_rename_to_econith_quant.sh  02_refactor_strings.py  03_strip_freqtrade.py  __init__.py  benchmark_simulation.py  calibrate_world.py  check_wiring.py  dev.mjs  paper_soak_check.py  parity_check.py  setup.mjs  (+2 more)
(+840 files in other folders)
