[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "econith-client"
dynamic = ["version"]

authors = [
  {name = "ECONITH Team", email = "coffee2307.pham@gmail.com"},
]

description = "ECONITH Quant - Client scripts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPLv3"}
# license = "GPLv3"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
  'requests >= 2.26.0',
  'python-rapidjson >= 1.0',
]


[project.urls]
Homepage = "https://github.com/econith/econith"
Documentation = "https://econith"
"Bug Tracker" = "https://github.com/econith/econith/issues"


[project.scripts]
econith-client = "econith_client.ft_client:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["econith_client*"]
exclude = ["tests", "tests.*"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "econith_client.__version__"}
